--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" >
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Second image">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Third image" title="Lion">
   </body>
 </html>
